--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <a href="./paciente/ServletPaciente">Manutenção de Pacientes</a><br/>
-        
+        <a href="./medico/ServletMedico">Manutenção de Médicos</a><br/>
+        <a href="./especialidade/Servletespecialidade">Manutenção de especialidades</a><br/>
+        <a href="./medicamento/ServletMedicamento">Manutenção de Medicamento</a><br/>
     </body>
 </html>
