--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h2>Trabalho DAW-Modelo 2</h2><br/>
         <a href="./paciente/ServletPaciente">Manutenção de Pacientes</a><br/>
         <a href="./medico/ServletMedico">Manutenção de Médicos</a><br/>
         <a href="./especialidade/Servletespecialidade">Manutenção de especialidades</a><br/>
